include(${CMAKE_SOURCE_DIR}/year2024/year.cmake)

add_subdirectory(day1/part1/cpp)
add_subdirectory(day1/part2/cpp)
add_subdirectory(day2/part1/cpp)
add_subdirectory(day2/part2/cpp)
add_subdirectory(day3/part1/cpp)
add_subdirectory(day3/part2/cpp)
add_subdirectory(day4/part1/cpp)
add_subdirectory(day4/part2/cpp)
add_subdirectory(day5/part1/cpp)
add_subdirectory(day5/part2/cpp)
